--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         THE TITLE OF YOUR WEBPAGE
       </h1>
       <div id="container"></div>
+      <button onclick="alert('Hello World')">Click Me</button>
 </body>
 </html>
