--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h1>
         THE TITLE OF YOUR WEBPAGE
       </h1>
-      <div id="container"></div>
-      <button onclick="alert('Hello World')">Click Me</button>
+      <div id="container">
+          <div class="content">
+          This is the glorious text-content!
+        </div>
+      </div>
+      <button onclick="alertFunction()">CLICK ME BABY</button>
 </body>
 </html>
